@@ -128,6 +128,8 @@ int center(buffer *b);
 int auto_indent_line(buffer * const b, const int64_t line, line_desc * const ld, const int64_t up_to_col);
 int backtab(buffer *b);
 int shift(buffer *b, char *p, char *msg, int msg_size);
+bool is_text_terminated(const buffer * const b);
+int ensure_text_terminated(buffer * const b);
 
 /* errors.c */
 
